--- a/resume.tex
+++ b/resume.tex
@@ -192,19 +192,19 @@
 
 \begin{center}
 	\linespread{1.1}\selectfont
-	\resumetitle{Mohamed Amine SAYAGH}\\
-	\resumeprofession{\color{customgray}SOFTWARE DEVELOPER}\\[0.2ex]
+	\resumetitle{Maryam SAYAGH}\\
+	\resumeprofession{\color{customgray}Data Business Analyst}\\[0.2ex]
 \end{center}
 \setlength{\columnsep}{0.9cm} % Adjust this value as needed
 \raggedcolumns% Reduce the margin on each column
 \renewcommand{\arraystretch}{1.1} % Adjust this value to increase/decrease line spacing
 \begin{multicols}{3}
 	\begin{tabularx}{\linewidth}{@{}Xr@{}}
-		\para{\color{customgray}Email:} & \customlink{mailto:contact@masayagh.com}{contact@masayagh.com}\\
-		\para{\color{customgray}Phone:} & \para{\color{customgray}Ma:}\customlink{tel:+212616137124}{(+212) 616\-137124}\\
+		\para{\color{customgray}Email:} & \customlink{mailto:maryamsayagho@gmail.com}{maryamsayagho@gmail.com}\\
+		\para{\color{customgray}Phone:} & \para{\color{customgray}Ma:}\customlink{tel:+212659945427}{(+212) 659\-945427}\\
 	\end{tabularx}
 	\begin{tabularx}{\linewidth}{@{}Xr@{}}
-		\para{\color{customgray}LinkedIn:} & \customlink{https://www.linkedin.com/in/masayagh}{linkedin.com/in/masayagh}\\
+		\para{\color{customgray}LinkedIn:} & \customlink{https://www.linkedin.com/in/masayagh}{Maryam Sayagh}\\
 		\para{\color{customgray}GitHub:} & \customlink{https://github.com/masayagh}{github.com/masayagh}\\
 	\end{tabularx}
 	\begin{tabularx}{\linewidth}{@{}Xr@{}}
